@@ -2,3 +2,5 @@
  
 ## A client and server program for transferring files from the client computer to the server computer
 
+VM options: 
+> --module-path ".\src\javafx-sdk-14.0.1\lib" --add-modules=javafx.controls,javafx.fxml
